# antilector_bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  configs.py  docker-compose.yml  example.env  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  run_celery.py  run_init.py  run_tg_bot.py  system_init.py
docker/bot/: Dockerfile  entrypoint.sh
docker/minio/docker-entrypoint-initdb.d/: init_users.sh
docker/nginx/: default.conf
docker/rabbitmq/: rabbitmq.conf
lib/nisqa/: metrics.py  model.py  readme.md  requirements.txt
lib/nisqa/config/: nisqa_s.yaml
lib/nisqa/core/: model_torch.py
lib/unsilence/: pretty_time_estimate.py  unsilence.py
lib/unsilence/intervals/: interval.py  intervals.py  time_calculations.py
lib/unsilence/render_media/: media_renderer.py  options.py  render_filter.py  render_interval_thread.py
lib/unsilence/tools/: ffmpeg_version.py
lib/unsilence_fast/: __init__.py  fast_media_renderer.py  fast_render_interval_thread.py  fast_render_task.py  unsilence.py
libs/nisqa/: model.py  readme.md  requirements.txt
libs/nisqa/config/: nisqa_s.yaml
libs/nisqa/core/: model_torch.py
libs/nisqa/utils/: process_utils.py
libs/unsilence/: __init__.py  _typing.py  pretty_time_estimate.py  readme.md  requirements.txt  unsilence.py
libs/unsilence/detect_silence/: detect_silence.py
libs/unsilence/intervals/: interval.py  intervals.py  time_calculations.py
libs/unsilence/render_media/: media_renderer.py  options.py  render_filter.py  render_interval_thread.py
libs/unsilence_fast/: fast_media_renderer.py  fast_render_interval_thread.py  fast_render_task.py  unsilence.py
migrations/: env.py
migrations/versions/: 2024_09_30_16_40-3d29382bcd16_.py  2024_09_30_18_57-10f9be5a3ef6_.py  2024_10_01_18_15-471ead140387_.py  2024_10_02_00_02-e6dbf0417a87_.py  2024_10_07_02_14-e20414916be4_.py  2024_10_07_19_10-95d4d8d1a8aa_.py  2024_10_07_19_59-b238431ce14f_.py  2024_10_11_01_51-a812d49a6dad_.py  2024_10_12_00_12-279661f97b65_.py  2024_10_13_01_11-84fbfd968965_.py  2024_10_13_01_33-1f38ebcac993_.py  2024_10_13_22_17-3b181e92c408_.py  2024_10_20_00_32-d7dc6fc988ae_.py  2025_02_22_23_04-4637f2bb466a_.py
processing/: celery_app.py  download_file.py  misc.py  models.py  processing_file.py  processors.py  representation.py  schema.py  tasks.py
processing/models/: __init__.py  common.py  download.py  lecture_summary.py  process.py  profiles.py  resource_usage.py
processing/predefined_profile/: default_unsilence_profile.py  load_to_db.py
processing/predefined_profile/predefined_audio_pipelines/: __init__.py  excellent.py  good.py  normal.py  terrible.py
processing/predefined_profile/predefined_unsilence_profiles/: __init__.py  common.py  unsilence_and_vad.py  unsilence_only.py  vad_only.py
processing/processors/: __init__.py  download.py  error_texts.py  process.py  process_unsilence.py  summarize_lecture.py  upload.py
processing/summary/: __init__.py  lecture_to_summary.py  llm_summarizer.py  transcribe.py
tests/: test_audio_pipeline_serialization.py  test_serialization_unsilence_action.py  test_video_pipeline_serialization.py
tg_bot/: main.py
tg_bot/apps/lectures/: __init__.py  admin.py  formating.py  handlers.py
tg_bot/apps/lectures/dialogs/: __init__.py  callbacks.py  dialogs.py  getters.py  handle_url.py  states.py
tg_bot/apps/menu/: __init__.py  handlers.py
tg_bot/apps/menu/dialogs/: __init__.py  dialogs.py  states.py
tg_bot/apps/summary/: __init__.py  admin.py  handlers.py
tg_bot/apps/summary/dialogs/: __init__.py  callbacks.py  dialogs.py  states.py
tools/audio_processing/: pipeline.py
tools/audio_processing/actions/: __init__.py  abstract.py  audiotools_actions.py  deepfilternet_actions.py  ffmpeg_actions.py
tools/video_processing/: pipeline.py
tools/video_processing/actions/: __init__.py  unsilence_actions.py
tools/video_processing/vad/: calculate_time_savings.py  vad_unsilence.py
tools/yt_dlp_downloader/: misc.py  yt_dlp_download_videos.py  yt_dlp_format_select.py
tools/yt_dlp_downloader/yt_dlp_extractors/: __init__.py  lectoriyfopf.py
utils/: audio.py  fixed_ffmpeg.py  formating.py  get_bot.py  logging_tqdm.py  minio_utils.py  misc.py  pathtools.py  progress_bar.py  system_init.py  thumbnail.py  torch_utils.py  video.py  yt_dlp_cached.py
utils/video/: measure.py  misc.py  modify.py
